configuring a container volume to initiate the schemas creations

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,5 +10,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: comfortyDB
+    volumes:
+      - ./src/main/resources/:/docker-entrypoint-initdb.d/
     # volumes:
     #    - ./data:/var/lib/postgresql/data
