--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,7 +1,6 @@
-# docker-compose.yml
 version: '3.1'
 services:
-  db:
+  postgres-db:
     image: postgres
     restart: always
     ports:
@@ -10,7 +9,26 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
       POSTGRES_DB: comfortyDB
+    container_name: postgres-db
     volumes:
       - ./src/main/resources/:/docker-entrypoint-initdb.d/
-    # volumes:
-    #    - ./data:/var/lib/postgresql/data
+    networks:
+      - mynetwork
+
+  comforty:
+    image: comforty-backend
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/comfortyDB
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=admin
+    container_name: comforty-backend
+    depends_on:
+      - postgres-db
+    networks:
+      - mynetwork
+
+networks:
+  mynetwork:
+    driver: bridge
