--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - mynetwork
 
   comforty:
-    image: comforty-backend
+    build: .
     ports:
       - "8080:8080"
     environment:
