--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,11 +10,11 @@ spring.datasource.password=admin
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
-Amazon s3 config
+# Amazon s3 config
 cloud.aws.credentials.access-key=AKIA5FTZAVNGZAXJZWE7
 cloud.aws.credentials.secret-key=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
 cloud.aws.region.static=us-east-1
 cloud.aws.stack.auto=false
 
-# application.bucket.name=comfortyawsbucket
+application.bucket.name=comfortyawsbucket
 
