--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,10 +11,10 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 # Amazon s3 config
-cloud.aws.credentials.access-key=AKIA5FTZAVNGZAXJZWE7
-cloud.aws.credentials.secret-key=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
-cloud.aws.region.static=us-east-1
+cloud.aws.credentials.access-key=
+cloud.aws.credentials.secret-key=
+cloud.aws.region.static=
 cloud.aws.stack.auto=false
 
-application.bucket.name=comfortyawsbucket
+application.bucket.name=
 
