--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,22 +12,27 @@ services:
     container_name: postgres-db
     volumes:
       - ./db/:/docker-entrypoint-initdb.d/
+      - ./postgres-data:/var/lib/postgresql/data
     networks:
       - mynetwork
   
-  # comforty:
-  #   build: .
-  #   ports:
-  #     - "8080:8080"
-  #   environment:
-  #     - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/comfortyDB
-  #     - SPRING_DATASOURCE_USERNAME=postgres
-  #     - SPRING_DATASOURCE_PASSWORD=admin
-  #   container_name: comforty-backend
-  #   depends_on:
-  #     - postgres-db
-  #   networks:
-  #     - mynetwork
+  comforty:
+    build: .
+    ports:
+      - "8080:8080"
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-db:5432/comfortyDB
+      - SPRING_DATASOURCE_USERNAME=postgres
+      - SPRING_DATASOURCE_PASSWORD=admin
+      - AWS_BUCKET_NAME=
+      - AWS_ACCESS_KEY=
+      - AWS_SECRET_KEY=
+      - AWS_REGION=
+    container_name: comforty-backend
+    depends_on:
+      - postgres-db
+    networks:
+      - mynetwork
 
 networks:
   mynetwork:
