--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,20 +1,8 @@
 spring.application.name=comforty-backend
 
-# spring.datasource.url=${SPRING_DATASOURCE_URL}
-# spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
-# spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
-spring.datasource.url=jdbc:postgresql://localhost:5433/comfortyDB
-spring.datasource.username=postgres
-spring.datasource.password=admin
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-
-# Amazon s3 config
-cloud.aws.credentials.access-key=
-cloud.aws.credentials.secret-key=
-cloud.aws.region.static=
-cloud.aws.stack.auto=false
-
-application.bucket.name=
-
