change the buiding image

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - mynetwork
   
   comforty:
-    build: .
+    image: abdo001/comforty:v2
     ports:
       - "8080:8080"
     environment:
