--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3.1'
+version: "3.1"
 services:
   postgres-db:
     image: postgres
     restart: always
     ports:
-      - "5433:5432"
+      - "5432:5432"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: admin
@@ -15,7 +15,7 @@ services:
       - ./postgres-data:/var/lib/postgresql/data
     networks:
       - mynetwork
-  
+
   comforty:
     image: abdo001/comforty:v2
     ports:
