--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "frontend": "file:",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.435.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
