--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "frontend": "file:",
     "lucide-react": "^0.435.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -34,7 +35,6 @@
     "react-router": "^6.26.1",
     "react-router-dom": "^6.26.1",
     "sonner": "^1.5.0",
-    "swiper": "^11.1.12",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
